--- a/index.html
+++ b/index.html
@@ -1,181 +1,270 @@
 <!DOCTYPE html>
 <html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>
+      Portfolio - Rahul Murali | Masters of Computer Applications Student
+    </title>
+    <script src="scripts/animate.js"></script>
+    <link rel="stylesheet" href="styles/output.css" />
+    <link rel="stylesheet" href="styles\main.css" />
+  </head>
 
-<head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Portfolio - Rahul Murali | Masters of Computer Applications Student</title>
-  <script src="scripts/animate.js"></script>
-  <link rel="stylesheet" href="styles/output.css" />
-  <link rel="stylesheet" href="styles\main.css" />
-</head>
-
-<body class="m-0 p-0 bg-no-repeat bg-cover h-full w-full"
-  style="background-image: url(https://images.unsplash.com/photo-1531824475211-72594993ce2a?q=80&w=1470&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D);">
-
-  <!-- Navigation bar -->
-  <nav
-    class="flex flex-row flex-nowrap pb-8 pt-4 sticky mb-2 top-0 left-0 bg-black/10 w-full items-center justify-between backdrop-blur backdrop-brightness-125 ease-out duration-300 text-white shadow shadow-black/50">
-    <p class="flex px-4 mx-2 text-center text-4xl font-bold tracking-wide">Portfolio</p>
-    <div class="dropdown dropdown-left">
-      <div tabindex="0" role="button" id="menu-btn" class="menu-button place-content-center m-1">
-        <span class="bar"></span>
-        <span class="bar"></span>
-        <span class="bar"></span>
+  <body class="m-0 p-0 bg-no-repeat bg-cover h-full w-full">
+    <!-- Navigation bar -->
+    <nav
+      class="flex flex-row flex-nowrap py-0 sticky top-0 left-0 bg-black/10 w-full items-center justify-between backdrop-blur backdrop-brightness-125 ease-out duration-300 text-white shadow shadow-black/50"
+    >
+      <p class="flex px-4 mx-2 text-center text-4xl font-bold tracking-wide">
+        Portfolio
+      </p>
+      <div class="dropdown dropdown-left">
+        <div
+          tabindex="0"
+          role="button"
+          id="menu-btn"
+          class="menu-button place-content-center m-1"
+        >
+          <svg
+            xmlns="http://www.w3.org/2000/svg"
+            class="h-14 w-18"
+            fill="none"
+            viewBox="0 0 24 24"
+            stroke="currentColor"
+          >
+            <path
+              stroke-linecap="round"
+              stroke-linejoin="round"
+              stroke-width="2"
+              d="M4 6h16M4 12h16M4 18h7"
+            />
+          </svg>
+        </div>
+        <ul
+          tabindex="0"
+          id="dropdown-cont"
+          class="dropdown-content z-[1] menu p-1 shadow bg-base-100 rounded-box w-52 mx-4 flex-col flex-nowrap list-none bg-white/80"
+        >
+          <li class="sm:mx-1 p-2 basis-1/3 font-semibold text-lg text-black/50">
+            <a href="#project-bg">Projects</a>
+          </li>
+          <li class="sm:mx-1 p-2 basis-1/3 font-semibold text-lg text-black/50">
+            <a href="#">News</a>
+          </li>
+          <li class="sm:mx-1 p-2 basis-1/3 font-semibold text-lg text-black/50">
+            <a href="#contact">Contact</a>
+          </li>
+        </ul>
       </div>
-      <ul tabindex="0" id="dropdown-cont"
-        class="dropdown-content z-[1] menu p-1 shadow bg-base-100 rounded-box w-52 mx-4 flex-col flex-nowrap list-none bg-white/80">
-        <li class="sm:mx-1 p-2 basis-1/3 font-semibold text-lg text-black/50"><a href="#project-bg">Projects</a></li>
-        <li class="sm:mx-1 p-2 basis-1/3 font-semibold text-lg text-black/50"><a href="#">News</a></li>
-        <li class="sm:mx-1 p-2 basis-1/3 font-semibold text-lg text-black/50"><a href="#contact">Contact</a></li>
-      </ul>
+    </nav>
+
+    <!-- Profile Details Card -->
+    <div class="m-0 p-4 min-h-svh sm:min-h-full">
+      <div
+        class="profile-card block ml-auto mr-auto my-10 px-2 pt-2 pb-1 min-h-36 sm:min-h-96 w-3/5 sm:w-5/12 rounded-2xl text-white bg-opacity-25 shadow-white hover:shadow-2xl"
+      >
+        <figure
+          class="flex mx-2 p-2 bg-transparent items-center place-content-center overflow-hidden flex-col sm:flex-row"
+        >
+          <img
+            class="max-h-32 rounded-full bg-contain border-4 border-black shadow-black"
+            src="./assets/user_profile.jpg"
+            alt="PROFILE PICTURE"
+          />
+          <figcaption
+            class="block m-0 sm:m-2 p-2 font-semibold text-base sm:text-xl sm:w-1/2"
+          >
+            Rahul Murali
+            <span class="text-xs sm:text-xs font-normal"><i>He/Him</i></span>
+            <span
+              class="block p-0 m-0 font-normal text-sm sm:text-base tracking-wide"
+              >Computer Applications Student at <wbr />Calicut University</span
+            >
+          </figcaption>
+        </figure>
+        <div class="container mr-auto ml-auto sm:mx-2 px-5 py-2 bg-transparent">
+          <h3 class="underline underline-offset-4 font-medium">About me</h3>
+          <p class="container p-1 h-full tracking-wide italic">
+            Rahul Murali is a recent graduate with a degree in Mathematics and a
+            passion for software development.
+          </p>
+        </div>
+      </div>
     </div>
-  </nav>
 
+    <!-- Projects featured section -->
+    <div class="m-0 py-2 sm:py-5 min-h-svh sm:min-h-full">
+      <div id="project-bg" class="sm:p-4 py-4 overflow-hidden">
+        <div
+          class="cards scroll-animate mx-2 sm:m-2 sm:min-h-[360px] flex bg-opacity-75 p-2 rounded-2xl basis-4/12 sm:basis-3/12 grow-0"
+        >
+          <figure class="cards-fig">
+            <img src="assets/weather-app-thumb.jpg" alt="Project thumbnail" />
+          </figure>
+          <div>
+            <p class="cards-desc sm:text-base">
+              A simple Javascript Weather Forecaster.
+            </p>
+            <button class="cards-button sm:text-sm" role="button">
+              <a
+                href="https://weather-application-nine-theta.vercel.app/"
+                target="_blank"
+                >visit</a
+              >
+            </button>
+          </div>
+        </div>
+        <div
+          class="cards scroll-animate mx-2 sm:m-2 sm:min-h-[360px] flex bg-opacity-75 p-2 rounded-2xl basis-4/12 sm:basis-3/12 grow-0"
+        >
+          <figure class="cards-fig">
+            <img
+              src="assets/temperature-anomaly-thumb.png"
+              alt="Project thumbnail"
+              style="background-color: white"
+            />
+          </figure>
+          <div>
+            <p class="cards-desc sm:text-base">
+              A simple webpage displaying temeperature anomalies.
+            </p>
+            <button class="cards-button sm:text-sm" role="button">
+              <a href="http://temp-anomalies-graph.vercel.app/" target="_blank"
+                >visit</a
+              >
+            </button>
+          </div>
+        </div>
+        <div
+          class="cards scroll-animate mx-2 sm:m-2 sm:min-h-[360px] flex bg-opacity-75 p-2 rounded-2xl basis-4/12 sm:basis-3/12 grow-0"
+        >
+          <figure class="cards-fig">
+            <img
+              src="assets/digilocker-guide-thumb.png"
+              alt="Project thumbnail"
+            />
+          </figure>
+          <div>
+            <p class="cards-desc sm:text-base">
+              A beginner digiLocker guide webpage.
+            </p>
+            <button class="cards-button sm:text-sm" role="button">
+              <a href="https://digilocker-guide.vercel.app/" target="_blank"
+                >visit</a
+              >
+            </button>
+          </div>
+        </div>
+        <div
+          class="cards scroll-animate mx-2 sm:m-2 sm:min-h-[360px] hiddebg-opacity-50ransparent p-2 rounded-2xl sm:basis-3/12 grow-0"
+        >
+          <figure class="cards-fig">
+            <img src="assets/C-Assignments-thumb.png" alt="Project thumbnail" />
+          </figure>
+          <div>
+            <p class="cards-desc sm:text-base">
+              list of basic C programs for uni CS purpose.
+            </p>
+            <button class="cards-button sm:text-sm" role="button">
+              <a href="https://github.com/visrm/C-Assignments" target="_blank"
+                >visit</a
+              >
+            </button>
+          </div>
+        </div>
+      </div>
+    </div>
+    <!-- Skillset -->
 
-  <!-- Profile Details Card -->
-  <div class="m-0 p-4 min-h-svh sm:min-h-full">
+    <!-- Work Experience -->
+
+    <!-- Educational Qualifications section -->
     <div
-      class="block ml-auto mr-auto my-10 px-2 pt-2 pb-1 min-h-36 sm:min-h-96 w-3/5 sm:w-5/12 rounded-2xl bg-white border shadow-black hover:shadow-2xl">
-      <figure
-        class="flex mx-2 p-2 bg-transparent items-center place-content-center overflow-hidden flex-col sm:flex-row">
-        <img class="max-h-32 rounded-full bg-contain  border border-white shadow-black" src="./assets/user_profile.jpg"
-          alt="PROFILE PICTURE" />
-        <figcaption class="block m-0 sm:m-2 p-2 font-semibold text-base sm:text-xl sm:w-1/2">
-          Rahul Murali
-          <span class="poppins-regular text-xs sm:text-xs font-normal"><i>He/Him</i></span>
-          <span class="block p-0 m-0 font-normal text-sm sm:text-base tracking-wide">Computer Applications Student
-            at
-            <wbr>Calicut University</span>
-        </figcaption>
-      </figure>
-      <hr>
-      <div class="container mr-auto ml-auto sm:mx-2 px-5 py-2 bg-transparent ">
-        <h3 class="underline underline-offset-4 font-medium">About me</h3>
-        <p class="container p-1 h-full tracking-wide italic"> Rahul Murali is a recent graduate with a degree in
-          Mathematics and a passion for software development.
+      class="grid bg-white px-4 pt-2 sm:pt-4 pb-4 sm:pb-8 place-content-center mx-0"
+    >
+      <h2
+        class="py-2 text-lg sm:text-xl font-semibold underline underline-offset-4 tracking-wide uppercase"
+      >
+        Educational Qualifications
+      </h2>
+      <div>
+        <p class="px-1 text-base sm:text-lg font-medium font-serif">
+          University of Calicut
+        </p>
+        <p class="px-1 py-0 text-sm sm:text-base font-sans">
+          Bachelor of Science, Mathematics
+          <span class="flex clear-left text-xs sm:text-sm text-black/75"
+            >2020 - 23</span
+          >
+        </p>
+      </div>
+      <div>
+        <p class="px-1 text-base sm:text-lg font-medium font-serif">
+          University of Calicut
+        </p>
+        <p class="px-1 py-0 text-sm sm:text-base font-sans">
+          Master of Computer Applications, IT
+          <span class="flex clear-left text-xs sm:text-sm text-black/75"
+            >2023 - present</span
+          >
         </p>
       </div>
     </div>
-  </div>
 
-
-  <!-- Projects featured section -->
-  <div class="m-0 py-2 sm:py-5 min-h-svh sm:min-h-full">
-    <div id="project-bg" class="sm:p-4 py-4 overflow-hidden">
-      <div
-        class="cards scroll-animate mx-2 sm:m-2 sm:min-h-[360px] flex bg-transparent p-2 rounded-2xl basis-4/12 sm:basis-3/12 grow-0">
-        <figure class="cards-fig">
-          <img src="assets/weather-app-thumb.jpg" alt="Project thumbnail">
-        </figure>
-        <hr>
-        <div>
-          <p class="cards-desc sm:text-base">
-            A simple Javascript Weather Forecaster.
-          </p><button class="cards-button sm:text-sm" role="button"><a
-              href="https://weather-application-nine-theta.vercel.app/" target="_blank">visit</a></button>
-        </div>
-      </div>
-      <div
-        class="cards scroll-animate mx-2 sm:m-2 sm:min-h-[360px] flex bg-transparent p-2 rounded-2xl basis-4/12 sm:basis-3/12 grow-0">
-        <figure class="cards-fig">
-          <img src="assets/temperature-anomaly-thumb.png" alt="Project thumbnail" style="background-color: white;">
-        </figure>
-        <hr>
-        <div>
-          <p class="cards-desc sm:text-base">
-            A simple webpage displaying temeperature anomalies.
-          </p><button class="cards-button sm:text-sm" role="button"><a href="http://temp-anomalies-graph.vercel.app/"
-              target="_blank">visit</a></button>
-        </div>
-      </div>
-      <div
-        class="cards scroll-animate mx-2 sm:m-2 sm:min-h-[360px] flex bg-transparent p-2 rounded-2xl basis-4/12 sm:basis-3/12 grow-0">
-        <figure class="cards-fig">
-          <img src="assets/digilocker-guide-thumb.png" alt="Project thumbnail">
-        </figure>
-        <hr>
-        <div>
-          <p class="cards-desc sm:text-base">
-            A beginner digiLocker guide webpage.
-          </p><button class="cards-button sm:text-sm" role="button"><a href="https://digilocker-guide.vercel.app/"
-              target="_blank">visit</a></button>
-        </div>
-      </div>
-      <div
-        class="cards scroll-animate mx-2 sm:m-2 sm:min-h-[360px] hidden sm:flex bg-transparent p-2 rounded-2xl sm:basis-3/12 grow-0">
-        <figure class="cards-fig">
-          <img src="assets/C-Assignments-thumb.png" alt="Project thumbnail">
-        </figure>
-        <hr>
-        <div>
-          <p class="cards-desc sm:text-base">
-            list of basic C programs for uni CS purpose.
-          </p><button class="cards-button sm:text-sm" role="button"><a href="https://github.com/visrm/C-Assignments"
-              target="_blank">visit</a></button>
-        </div>
-      </div>
+    <!-- Contacts section -->
+    <div
+      class="contacts flex px-1 sm:px-4 py-3 sm:py-4 flex-row flex-nowrap align-middle justify-evenly sm:gap-2"
+    >
+      <h2
+        id="contact"
+        class="p-2 sm:text-xl font-semibold underline underline-offset-4 sm:tracking-wide uppercase clear-right"
+      >
+        Contacts:
+      </h2>
+      <a href="mailto:yveltal4286@gmail.com" rel="noopener noreferrer">
+        <div class="icons8-gmail"></div>
+      </a>
+      <a
+        href="https://www.linkedin.com/in/rahulmurali852/"
+        target="_blank"
+        rel="noopener noreferrer"
+      >
+        <div class="icons8-linkedin"></div>
+      </a>
+      <a
+        href="https://www.instagram.com/crescent.rahul/ "
+        target="_blank"
+        rel="noopener noreferrer"
+      >
+        <div class="icons8-instagram"></div>
+      </a>
+      <a
+        href="https://discord.com/invite/Sd3KQMMGtb"
+        target="_blank"
+        rel="noopener noreferrer"
+      >
+        <div class="icons8-discord"></div>
+      </a>
+      <a
+        href="https://github.com/visrm/"
+        target="_blank"
+        rel="noopener noreferrer"
+      >
+        <div class="icons8-github"></div>
+      </a>
+      <a
+        href="https://pinterest.com/vyali09/"
+        target="_blank"
+        rel="noopener noreferrer"
+      >
+        <div class="icons8-pinterest"></div>
+      </a>
     </div>
-  </div>
-  <!-- Skillset -->
 
-
-  <!-- Work Experience -->
-
-
-
-  <!-- Educational Qualifications section -->
-  <div class="grid bg-white px-4 pt-2 sm:pt-4 pb-4 sm:pb-8 place-content-center mx-0">
-    <h2 class="py-2 text-lg sm:text-xl font-semibold underline underline-offset-4 tracking-wide uppercase">
-      Educational
-      Qualifications</h2>
-    <div>
-      <p class="px-1 text-base sm:text-lg font-medium font-serif">University of Calicut</p>
-      <p class="px-1 py-0 text-sm sm:text-base font-sans">Bachelor of Science, Mathematics
-        <span class="flex clear-left text-xs sm:text-sm text-black/75">2020 - 23</span>
-      </p>
+    <!--footer-->
+    <div class="flex w-full py-1 bg-white">
+      <p class="block mr-auto ml-auto">© Copyright 2024 Rahul Murali</p>
     </div>
-    <div>
-      <p class="px-1 text-base sm:text-lg font-medium font-serif">University of Calicut</p>
-      <p class="px-1 py-0 text-sm sm:text-base font-sans">Master of Computer Applications, IT
-        <span class="flex clear-left text-xs sm:text-sm text-black/75">2023 - present</span>
-      </p>
-    </div>
-  </div>
-
-
-  <!-- Contacts section -->
-  <div class="contacts flex px-3 sm:px-4 py-4 flex-row flex-nowrap align-middle justify-evenly">
-    <h2 id="contact"
-      class="p-2 sm:text-xl font-semibold underline underline-offset-4 sm:tracking-wide uppercase clear-right">
-      Contacts:
-    </h2>
-    <a href="mailto:yveltal4286@gmail.com" rel="noopener noreferrer">
-      <div class="icons8-gmail"></div>
-    </a>
-    <a href="https://www.linkedin.com/in/rahulmurali852/" target="_blank" rel="noopener noreferrer">
-      <div class="icons8-linkedin"></div>
-    </a>
-    <a href="https://www.instagram.com/crescent.rahul/ " target="_blank" rel="noopener noreferrer">
-      <div class="icons8-instagram"></div>
-    </a>
-    <a href="https://discord.com/invite/Sd3KQMMGtb" target="_blank" rel="noopener noreferrer">
-      <div class="icons8-discord"></div>
-    </a>
-    <a href="https://github.com/visrm/" target="_blank" rel="noopener noreferrer">
-      <div class="icons8-github"></div>
-    </a>
-    <a href="https://pinterest.com/vyali09/" target="_blank" rel="noopener noreferrer">
-      <div class="icons8-pinterest"></div>
-    </a>
-  </div>
-
-
-  <!--footer-->
-  <div class="flex w-full py-1 bg-white">
-    <p class="block mr-auto ml-auto ">© Copyright 2024 Rahul Murali</p>
-  </div>
-
-</body>
-
+  </body>
 </html>
